--- a/.github/workflows/my-action.yml
+++ b/.github/workflows/my-action.yml
@@ -12,6 +12,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Install tsx globally
+        run: npm install -g tsx
+
       - name: Run tsx server
         run: |
           timeout 15s tsx server.ts
